--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.3",
+    "devicon": "^2.16.0",
     "jquery": "^3.7.1",
     "next": "14.1.4",
     "react": "^18",
