--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.7.1",
     "next": "14.1.4",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18"
   },
   "devDependencies": {
