--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -16,19 +17,31 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/x-date-pickers": "^7.2.0",
+    "@types/gsap": "^3.0.0",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "devicon": "^2.16.0",
+    "framer-motion": "^11.1.7",
+    "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "jquery": "^3.7.1",
     "next": "14.1.4",
     "react": "^18",
+    "react-animate-on-scroll": "^2.1.9",
     "react-calendar": "^4.8.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4",
+    "split-type": "^0.3.4",
+    "swiper": "^11.1.1",
+    "three": "^0.164.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.30",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18",
+    "@types/three": "^0.164.0",
     "typescript": "^5"
   }
 }
