Added new functionality

--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.2.0",
     "@types/gsap": "^3.0.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "devicon": "^2.16.0",
@@ -25,13 +30,17 @@
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
     "jquery": "^3.7.1",
+    "ldrs": "^1.0.2",
     "next": "14.1.4",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-animate-on-scroll": "^2.1.9",
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
+    "resend": "^3.2.0",
     "sharp": "^0.33.4",
     "split-type": "^0.3.4",
+    "styled-components": "^6.1.11",
     "swiper": "^11.1.1",
     "three": "^0.164.1"
   },
